--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sakkurthi Sashank | Linktree</title>
+    <title>Sakkurthi Sashank</title>
     <!-- Favicon -->
     <link
       rel="icon"
@@ -87,7 +87,5 @@
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
     </div>
-
-    <div id="hashtag">I Love what I do ❤️</div>
   </body>
 </html>
